--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -188,7 +188,7 @@
 			"p10t": {
 				"alldone": "只有当所有人完成才完成",
 				"transferable": "可转办",
-				"rds": "参与者定义字符串",
+				"rds": "参与者字符串",
 				"pick": "可参考定义",
 				"try": "测试参与者定义字符串",
 				"tryteam": "使用组队",
