--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -232,6 +232,10 @@
 		"sub": {
 			"SUB": "子流程ID",
 			"standalone": "独立运行"
+		},
+		"designer": {
+			"AthenB": "A->B, 请点选B节点",
+			"BthenA": "B->A, 请点选A节点"
 		}
 	}
 }
