PDSResolver and explain/rds

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -94,6 +94,7 @@
 		"sendback": "Push back",
 		"revoke": "Revoke",
 		"check": "Check",
+		"resolve": "Resolve",
 		"sendadhoc": "Send it out",
 		"sendadhocConfirm": "Yes, send task to above people",
 		"sendadhocReconsider": "No, let me re-considerate",
