--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -147,6 +147,7 @@
 	},
 	"todo": {
 		"status": "Task Status",
+		"starterOU": "Starter Department",
 		"owner": "Task Owner",
 		"doneat": "Completed",
 		"decision": "Decision",
