--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -147,6 +147,7 @@
 	"todo": {
 		"status": "任务状态",
 		"starterOU": "发起人部门",
+		"starterCN": "发起人姓名",
 		"owner": "任务负责人",
 		"doneat": "完成时间",
 		"decision": "节点决策",
