Change display of internal vars StarterOU/StarterCN/Starter

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -147,8 +147,9 @@
 	},
 	"todo": {
 		"status": "Task Status",
-		"starterOU": "Starter Department",
-		"starterCN": "Starter Name",
+		"Starter": "Starter UID",
+		"StarterOU": "Starter Department",
+		"StarterCN": "Starter Name",
 		"owner": "Task Owner",
 		"doneat": "Completed",
 		"decision": "Decision",
