--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -146,8 +146,9 @@
 	},
 	"todo": {
 		"status": "任务状态",
-		"starterOU": "发起人部门",
-		"starterCN": "发起人姓名",
+		"Starter": "发起人ID",
+		"StarterOU": "发起人部门",
+		"StarterCN": "发起人姓名",
 		"owner": "任务负责人",
 		"doneat": "完成时间",
 		"decision": "节点决策",
