add: input type of user_ and usr_
user_类型变量会自动插入一个ou_user_变量，auto为true，输入界面不显示，
显示界面会显示

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -71,6 +71,7 @@
 			"addDesc": "Add Description",
 			"setTags": "Set TAGS",
 			"setVisi": "Set Visibility",
+			"setOwner": "Set Owner",
 			"deleteThisTempalte": "Delete This Template",
 			"lastUpdate": "Last Update "
 		}
@@ -150,6 +151,7 @@
 		"Starter": "Starter UID",
 		"StarterOU": "Starter Department",
 		"StarterCN": "Starter Name",
+		"OUof": "OU",
 		"owner": "Task Owner",
 		"doneat": "Completed",
 		"decision": "Decision",
