--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -71,6 +71,7 @@
 			"addDesc": "添加备注",
 			"setTags": "设置标签",
 			"setVisi": "设置可见性",
+			"setOwner": "设置流程Owner",
 			"deleteThisTempalte": "删除这个模版",
 			"lastUpdate": "上次更新 "
 		}
@@ -149,6 +150,7 @@
 		"Starter": "发起人ID",
 		"StarterOU": "发起人部门",
 		"StarterCN": "发起人姓名",
+		"OUof": "部门",
 		"owner": "任务负责人",
 		"doneat": "完成时间",
 		"decision": "节点决策",
