--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -251,6 +251,11 @@
 		"designer": {
 			"AthenB": "A->B, 请点选B节点",
 			"BthenA": "B->A, 请点选A节点"
+		},
+		"workpage": {
+			"filepond": {
+				"labelIdle": "拖放本地文件到这里作为PBO，或浏览选择文件"
+			}
 		}
 	}
 }
