Improve filepond display

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -257,9 +257,10 @@
 		"AthenB": "A->B, Waiting for B",
 		"BthenA": "B->A, Waiting for A"
 	},
-	"workpage": {
-		"filepond": {
-			"labelIdle": "Drag local file to here as PBO, or Browse"
+	"filepond": {
+		"labelIdle": {
+			"pbo": "Drop file or Browse",
+			"kvar": "Drop file or Browse"
 		}
 	},
 	"confirm": {
