replace invalid char in kvar name
also, rearrange dropdown menu to the left

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -191,7 +191,7 @@
 		}
 	},
 	"prop": {
-		"label": "Label",
+		"label": "Activity Description",
 		"action": {
 			"tab": {
 				"participant": "Participant",
