--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -217,7 +217,12 @@
 				"basic": "Basic",
 				"extra": "Extra",
 				"name": "Name",
-				"options": "Options",
+				"tbl_options": "Headers",
+				"ou_options": "OU Code",
+				"sel_options": "Options",
+				"tbl_placeholder": "Colname1;Colname2;Colname3",
+				"ou_placeholder": "ou_code;yes/no(include top level)",
+				"sel_placeholder": "Option1;Option2;Option3",
 				"value": "Value",
 				"label": "Label",
 				"placeholder": "Placeholder",
