--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -214,7 +214,12 @@
 				"basic": "基础",
 				"extra": "附加",
 				"name": "名称",
-				"options": "选项",
+				"tbl_options": "栏位名称",
+				"ou_options": "组织选项",
+				"sel_options": "选项",
+				"tbl_placeholder": "栏位名1;栏位名2;栏位名3",
+				"ou_placeholder": "ou_code;yes/no(是否包含当前级)",
+				"sel_placeholder": "可选项1;可选项2;可选项3",
 				"value": "初始",
 				"label": "标识",
 				"placeholder": "提示",
