--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -149,6 +149,7 @@
 		"OR": "或者,你也可以",
 		"ifnotfamiliar": "一个流程可能会卷入很多的参与人，如果你对当前流程的设计了解不足，建议先做演练，演练时所有工作项将都发送给你自己",
 		"iffamiliar": "或者，你也可以点下面按钮正式启动这个流程",
+		"useflexibleteam": "如果使用灵活组队，可在下面指定",
 		"needtitle": "请提供标题",
 		"pleaseConfirm": "请确认以下信息",
 		"warnNoPbo": "缺失主业务对象",
