--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -80,6 +80,7 @@
 			"seeWorkflows": "See Workflows",
 			"seeWorklist": "See Worklist",
 			"addDesc": "Add Description",
+			"set": "Setting",
 			"setTags": "Set TAGS",
 			"setVisi": "Set Visibility",
 			"setOwner": "Set Owner",
