Redesign process track display

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -191,6 +191,8 @@
 		"print": "Print",
 		"startat": "Start at",
 		"startby": "Start by",
+		"nodevars": "Node Variables",
+		"comments": "User Comments",
 		"restartrehearsal": "Restart Rehearsal",
 		"cancelworkflowatfirststep": "Abandon Process"
 	},
