--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -155,6 +155,7 @@
 		"teamid": "Start with team",
 		"recentTeam": "Recent used team",
 		"checkitout": "Check it out",
+		"monitorit": "Goto Monitor",
 		"firststep": "Goto the first task",
 		"startanother": "Start another",
 		"OR": "Or",
