--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -154,6 +154,7 @@
 		"teamid": "匹配一个工作小组",
 		"recentTeam": "最近使用的工作小组",
 		"checkitout": "已启动, 去看一下",
+		"monitorit": "监控其运行",
 		"firststep": "直接去到第一个任务项",
 		"startanother": "再次启动这个流程",
 		"OR": "或者,你也可以",
