--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -230,6 +230,7 @@
 			"p10t": {
 				"alldone": "多人参与时投票",
 				"transferable": "可转办",
+				"sr": "循环中出现时，始终单一工作项",
 				"pds": "参与者字符串",
 				"pick": "可参考定义",
 				"try": "测试参与者定义字符串",
