--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -41,6 +41,7 @@
 		"cols-4": "每行最多四个",
 		"totalRows": "总共个数",
 		"pageSize": "每页个数",
+		"pageCount": "页数",
 		"sortBy": "排序方式",
 		"filter": "过滤",
 		"bywhat": "根据名称或标题过滤",
