Connection set value within table editor

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -296,6 +296,12 @@
 		"sub": {
 			"SUB": "Sub TPLID",
 			"standalone": "Standalone"
+		},
+		"connect": {
+			"decision": "Decision",
+			"setValue": "Set Process Value",
+			"varname": "Var Name",
+			"varvalue": "Var Value"
 		}
 	},
 	"designer": {
