Expand/collapse processtrack

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -208,7 +208,11 @@
 		"comments": "User Comments",
 		"restartrehearsal": "Restart Rehearsal",
 		"cancelworkflowatfirststep": "Abandon Process",
-		"workflowcontext": "Workflow Context"
+		"workflowcontext": "Workflow Context",
+		"track": {
+			"dakai": "Expand",
+			"shouqi": "Collapse"
+		}
 	},
 	"tpl": {
 		"new": "New",
