add values to I18N

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -347,14 +347,14 @@
 		"locale": {
 			"usedefault": {
 				"title": "Browser language detected",
-				"body": "MTC use your browser's default language, you may change it in settings if you'd like to use other language in MTC",
+				"body": "For first time user, MTC use your browser's default language '{browserlang}', you may change to other language language in MTC setting",
 				"confirm": "Got it"
 			},
 			"langchanged": {
 				"title": "Browser language changed",
-				"body": "Browser language changed, change MTC language respectively?",
+				"body": "Browser language changed to '{browserlang}', change MTC language to it respectively?",
 				"button1": "Yes",
-				"button2": "Stick on current language"
+				"button2": "Stick on current {currentlang}"
 			}
 		}
 	},
