--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -34,11 +34,16 @@
 		"in": "In"
 	},
 	"remotetable": {
-		"colperrow": "Col per row",
-		"cols-1": "one cols per row",
-		"cols-2": "two cols per row",
-		"cols-3": "three cols per row",
-		"cols-4": "four cols per row",
+		"rowperpage": "Rows per page",
+		"colperrow": "Cols per row",
+		"rows-10": "10 items per page",
+		"rows-20": "20 items per page",
+		"rows-50": "50 items per page",
+		"rows-100": "100 items per page",
+		"cols-1": "one item per row",
+		"cols-2": "two items per row",
+		"cols-3": "three items per row",
+		"cols-4": "four items per row",
 		"totalRows": "Total",
 		"pageSize": "Page Size",
 		"pageCount": "Page Count",
@@ -97,7 +102,8 @@
 			"setOwner": "Set Owner",
 			"deleteThisTempalte": "Delete This Template",
 			"lastUpdate": "Last Update",
-			"exportdata": "Export Data"
+			"exportdata": "Export Data",
+			"editlog": "Edit log"
 		}
 	},
 	"title": {
